--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ nav ul {
     padding: 0;
 }
 
+
 nav ul li {
     display: inline;
     margin-right: 10px;
@@ -38,6 +39,15 @@ nav ul li {
 nav ul li a {
     color: white;
     text-decoration: none;
+}
+
+nav a{
+    transition: font-size 0.3s ease;
+}
+
+nav a:hover {
+    font-size: 20px;
+    color: red;
 }
 
 main {
@@ -120,12 +130,14 @@ transform: scale(1.1);
 
 .info-box {
     background-color: #ffffff;
-    padding: 20px;
-    margin-bottom: 20px;
+    padding: 40px;
+    margin: 0 auto 20px auto;
     border-radius: 8px;
     box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.1);
     text-align: center;
     border: 1px solid #000000;
+    width: 50%;
+    align-items: center;
 }
 
 footer {
@@ -153,4 +165,24 @@ footer {
     box-shadow: 10px 10px 10px #585858;
     display: block; 
     margin: 0 auto;
+}
+
+.info-boxcontato {
+    background-color: #ffffff;
+    padding: 40px;
+    margin: 0 auto 40px auto;
+    border-radius: 8px;
+    box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.1);
+    text-align: center;
+    border: 1px solid #000000;
+    width: 50%;
+    align-items: center;
+}
+
+footer a {
+    color: #ffffff;
+    text-decoration: none;
+}
+footer a:hover{
+    color: #585858
 }
