--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,9 @@ p {
     box-shadow: 2px 2px 2px 2px rgba(58585);
     width: calc(25% - 20px);
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .hero img {
